--- a/app/src/main/res/layout/activity_section_wff.xml
+++ b/app/src/main/res/layout/activity_section_wff.xml
@@ -120,13 +120,27 @@
                             android:layout_alignBottom="@id/qtxt_wfi02"
                             android:text="@string/Q_wfi02" />
                     </RelativeLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/wfi02"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/wfi02" />
+    <EditText
+        android:id="@+id/wfi02"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:hint="@string/wfi02" />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        android:onClick="QRCode"
+        android:padding="12dp"
+        android:src="@drawable/ic_qr_code" />
+
+</LinearLayout>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
